# $Id: Makefile.am,v 1.1 2006/11/27 09:57:01 mloskot Exp $
# 
# Author: Mateusz Loskot <mateusz@loskot.net>
#
SOURCE = \
	soci-odbc.h \
	utility.h \
	blob.cpp \
	factory.cpp \
	row-id.cpp \
	session.cpp \
	standard-into-type.cpp \
	standard-use-type.cpp \
	statement.cpp \
	vector-into-type.cpp \
	vector-use-type.cpp

EXTRA_DIST = \
	$(SOURCE) \
	Makefile.basic


